adds launch4j packaging